--- a/Drinkit/Resources/en.lproj/LaunchScreen.storyboard
+++ b/Drinkit/Resources/en.lproj/LaunchScreen.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -16,20 +16,19 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="kit" translatesAutoresizingMaskIntoConstraints="NO" id="cLD-5n-r8A">
-                                <rect key="frame" x="121.66666666666669" y="363.66666666666669" width="150" height="150.00000000000006"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="kit" translatesAutoresizingMaskIntoConstraints="NO" id="rt3-hN-1on">
+                                <rect key="frame" x="121.66666666666669" y="351" width="150" height="150"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="150" id="Ln1-CO-diV"/>
-                                    <constraint firstAttribute="width" constant="150" id="tpt-CA-YvD"/>
+                                    <constraint firstAttribute="width" constant="150" id="JRQ-4j-Hc7"/>
+                                    <constraint firstAttribute="height" constant="150" id="vuu-Fd-uyl"/>
                                 </constraints>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" red="0.21960783" green="0.29803922770000002" blue="0.82745099070000006" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
-                            <constraint firstItem="cLD-5n-r8A" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="QI7-kc-I97"/>
-                            <constraint firstItem="cLD-5n-r8A" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="cyC-ij-AZ6"/>
+                            <constraint firstItem="rt3-hN-1on" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="OTy-2x-jte"/>
+                            <constraint firstItem="rt3-hN-1on" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="ngn-MA-iiZ"/>
                         </constraints>
                     </view>
                 </viewController>
